; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/e1000e/extr_es2lan.c_e1000_cfg_on_link_up_80003es2lan.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/e1000e/extr_es2lan.c_e1000_cfg_on_link_up_80003es2lan.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.e1000_hw = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@e1000_media_type_copper = common dso_local global i64 0, align 8
@SPEED_1000 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.e1000_hw*)* @e1000_cfg_on_link_up_80003es2lan to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @e1000_cfg_on_link_up_80003es2lan(%struct.e1000_hw* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.e1000_hw*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.e1000_hw* %0, %struct.e1000_hw** %3, align 8
  store i64 0, i64* %4, align 8
  %7 = load %struct.e1000_hw*, %struct.e1000_hw** %3, align 8
  %8 = getelementptr inbounds %struct.e1000_hw, %struct.e1000_hw* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @e1000_media_type_copper, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %32

13:                                               ; preds = %1
  %14 = load %struct.e1000_hw*, %struct.e1000_hw** %3, align 8
  %15 = call i64 @e1000e_get_speed_and_duplex_copper(%struct.e1000_hw* %14, i64* %5, i64* %6)
  store i64 %15, i64* %4, align 8
  %16 = load i64, i64* %4, align 8
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %13
  %19 = load i64, i64* %4, align 8
  store i64 %19, i64* %2, align 8
  br label %34

20:                                               ; preds = %13
  %21 = load i64, i64* %5, align 8
  %22 = load i64, i64* @SPEED_1000, align 8
  %23 = icmp eq i64 %21, %22
  br i1 %23, label %24, label %27

24:                                               ; preds = %20
  %25 = load %struct.e1000_hw*, %struct.e1000_hw** %3, align 8
  %26 = call i64 @e1000_cfg_kmrn_1000_80003es2lan(%struct.e1000_hw* %25)
  store i64 %26, i64* %4, align 8
  br label %31

27:                                               ; preds = %20
  %28 = load %struct.e1000_hw*, %struct.e1000_hw** %3, align 8
  %29 = load i64, i64* %6, align 8
  %30 = call i64 @e1000_cfg_kmrn_10_100_80003es2lan(%struct.e1000_hw* %28, i64 %29)
  store i64 %30, i64* %4, align 8
  br label %31

31:                                               ; preds = %27, %24
  br label %32

32:                                               ; preds = %31, %1
  %33 = load i64, i64* %4, align 8
  store i64 %33, i64* %2, align 8
  br label %34

34:                                               ; preds = %32, %18
  %35 = load i64, i64* %2, align 8
  ret i64 %35
}

declare dso_local i64 @e1000e_get_speed_and_duplex_copper(%struct.e1000_hw*, i64*, i64*) #1

declare dso_local i64 @e1000_cfg_kmrn_1000_80003es2lan(%struct.e1000_hw*) #1

declare dso_local i64 @e1000_cfg_kmrn_10_100_80003es2lan(%struct.e1000_hw*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
